--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,11 @@
     <string name="known_for">KNOWN FOR</string>
     <string name="highlighted_movie_image">highlighted movie image</string>
 
+    <string name="no_internet">No hay conexión a internet</string>
+    <string name="no_saved_movies">No tienes Favoritos guardados</string>
+    <string name="no_search_movies">No se encontraron resultados para:</string>
+    <string name="error_no_user">Usuario y/o contraseña incorrectos</string>
+    <string name="payment_error">Error al realizar el pago</string>
     <string-array name="document_types">
         <item>DNI</item>
         <item>Pasaporte</item>
